Added info
changed formatting. Gave explanation of adding VM args.